--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@fastify/autoload": "^5.0.0",
     "@fastify/sensible": "^5.0.0",
+    "@prisma/client": "^4.8.0",
     "fastify": "^4.0.0",
     "fastify-cli": "^5.7.0",
     "fastify-plugin": "^4.0.0"
@@ -31,6 +32,7 @@
     "@types/tap": "^15.0.5",
     "concurrently": "^7.0.0",
     "fastify-tsconfig": "^1.0.1",
+    "prisma": "^4.8.0",
     "tap": "^16.1.0",
     "typescript": "^4.5.4"
   }
