--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -23,7 +23,8 @@
     "@prisma/client": "^4.8.0",
     "fastify": "^4.0.0",
     "fastify-cli": "^5.7.0",
-    "fastify-plugin": "^4.0.0"
+    "fastify-plugin": "^4.0.0",
+    "fastify-prisma-client": "^5.0.0"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.59",
