--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,7 +19,11 @@
   "license": "ISC",
   "dependencies": {
     "@fastify/autoload": "^5.0.0",
+    "@fastify/cookie": "^8.3.0",
+    "@fastify/oauth2": "^7.0.0",
     "@fastify/sensible": "^5.0.0",
+    "@fastify/session": "^10.1.1",
+    "@octokit/rest": "^19.0.5",
     "@prisma/client": "^4.8.0",
     "fastify": "^4.0.0",
     "fastify-cli": "^5.7.0",
