githubとusersテーブルへのアクセスをgatewaysに切り出し

--- a/apps/api/.swcrc
+++ b/apps/api/.swcrc
@@ -8,6 +8,7 @@
     },
     "target": "es2020",
     "paths": {
+      "@gateways/*": ["./src/gateways/*"],
       "@hooks/*": ["./src/hooks/*"],
       "@routes/*": ["./src/routes/*"],
       "@middlewares/*": ["./src/middlewares/*"]
