--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,11 +1,17 @@
 {
+  "extends": "fastify-tsconfig",
   "compilerOptions": {
     "baseUrl": "./",
+    "outDir": "dist",
+    "sourceMap": true,
     "paths": {
       "@gateways/*": ["./src/gateways/*"],
       "@hooks/*": ["./src/hooks/*"],
       "@routes/*": ["./src/routes/*"],
       "@middlewares/*": ["./src/middlewares/*"]
     }
+  },
+  "ts-node": {
+    "swc": true
   }
 }
