transaction一覧を表示

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -10,10 +10,14 @@
   },
   "dependencies": {
     "bootstrap": "^5.2.3",
+    "date-fns": "^2.29.3",
     "next": "13.0.0",
+    "node-sass": "^7.0.3",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-dom": "^18.2.0",
+    "sass": "^1.58.3",
+    "swr": "^2.0.3",
     "ui": "*"
   },
   "devDependencies": {
