--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@fastify/autoload": "^5.0.0",
     "@fastify/cookie": "^8.3.0",
+    "@fastify/cors": "^8.2.0",
     "@fastify/oauth2": "^7.0.0",
     "@fastify/sensible": "^5.0.0",
     "@fastify/session": "^10.1.1",
