trpcを導入してみた

--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -26,11 +26,13 @@
     "@fastify/session": "^10.1.1",
     "@octokit/rest": "^19.0.5",
     "@prisma/client": "^4.8.0",
-    "fastify": "^4.0.0",
+    "@trpc/server": "^10.12.0",
+    "fastify": "^4.13.0",
     "fastify-cli": "^5.7.0",
     "fastify-plugin": "^4.0.0",
     "fastify-prisma-client": "^5.0.0",
-    "lodash": "^4.17.21"
+    "lodash": "^4.17.21",
+    "zod": "^3.20.6"
   },
   "devDependencies": {
     "@swc/cli": "^0.1.59",
