--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -5,6 +5,7 @@
     "outDir": "dist",
     "sourceMap": true,
     "esModuleInterop": true,
+    "strict": true,
     "paths": {
       "@gateways/*": ["./gateways/*"],
       "@hooks/*": ["./hooks/*"],
