--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tanstack/react-query": "^4.24.10",
+    "@trpc/client": "^10.12.0",
+    "@trpc/next": "^10.12.0",
+    "@trpc/react-query": "^10.12.0",
+    "@trpc/server": "^10.12.0",
     "bootstrap": "^5.2.3",
     "date-fns": "^2.29.3",
     "next": "13.0.0",
